# Maintenance

./: .dockerignore  .gitignore  COMMIT_EDITMSG  DATABASE_SETUP_GUIDE.md  DEPLOYMENT.md  Dockerfile  EQUIPMENT_ICONS.md  GITHUB_UPLOAD_GUIDE.md  README.md  app.py  build.sh  forms.py  index  init_db.py  models.py  pyproject.toml  render.yaml  replit.md  routes.py
logs/refs/heads/: main  replit-agent
static/css/: style.css
static/js/: main.js
static/static/css/: style.css
static/static/js/: main.js
templates/: 404.html  500.html  add_equipment.html  base.html  categories.html  create_notification.html  edit_equipment.html  export_logs.html  login.html  notifications.html  select_equipment.html
templates/templates/: add_equipment.html  edit_equipment.html  equipment.html  equipment_detail.html  index.html  log_work.html  manage_notifications.html  manage_users.html  select_equipment.html
