[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maintenance-log"
version = "0.1.0"
description = "Equipment maintenance logging web application"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.1.0",
    "flask-wtf>=1.2.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
    "wtforms>=3.1.0",
    "werkzeug>=3.0.0",
    "sqlalchemy>=2.0.0",
    "reportlab>=4.0.0",
    "flask-login>=0.6.0",
]
